--- a/Demo/razor.changeSymbol.html
+++ b/Demo/razor.changeSymbol.html
@@ -8,7 +8,7 @@
     <script>
         $(function () {
             razor.changeSymbol('~');
-            $("#test-template").quickRender();
+            $("#test-template").renderToParent();
         });
     </script>
 </head>
