--- a/Test/TestEscape.html
+++ b/Test/TestEscape.html
@@ -49,9 +49,21 @@
                 list: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10']
             };
 
+            var vars_escape = {
+                header: "<Header>",
+                header2: "<Header2>",
+                header3: "<Header3>",
+                header4: "<Header4>",
+                header5: "<Header5>",
+                header6: "<Header6>",
+                list: ['&1', '&2', '&3', '&4', '&5', '&6', '&7', '&8', '&9', '&10']
+            };
+
             var template = "<div><h1 class='header'>@(ViewBag.header)</h1><h2 class='header2'>@(ViewBag.header2)</h2><h3 class='header3'>@(ViewBag.header3)</h3><h4 class='header4'>@(ViewBag.header4)</h4><h5 class='header5'>@(ViewBag.header5)</h5><h6 class='header6'>@(ViewBag.header6)</h6><ul class='list'>@for (var i = 0, l = ViewBag.list.length; i < l; i++) { <li class='item'>@(ViewBag.list[i])</li>}</ul></div>";
 
-            var res = razor.render(template, vars);
+            var template_escape = "<div><h1 class='header'>@(- ViewBag.header)</h1><h2 class='header2'>@(- ViewBag.header2)</h2><h3 class='header3'>@(- ViewBag.header3)</h3><h4 class='header4'>@(- ViewBag.header4)</h4><h5 class='header5'>@(- ViewBag.header5)</h5><h6 class='header6'>@(- ViewBag.header6)</h6><ul class='list'>@for (var i = 0, l = ViewBag.list.length; i < l; i++) { <li class='item'>@(- ViewBag.list[i])</li>}</ul></div>";
+
+            var res = razor.render(template_escape, vars_escape);
             console.log(res);
         });
     </script>
