添加node.js express模板支持

--- a/Demo/$(selector).renderNode.html
+++ b/Demo/$(selector).renderNode.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <script src="../jquery-1.7.1.min.js"></script>
-    <script src="../RazorJs.js"></script>
+    <script src="../razor-tmpl.js"></script>
     <script>
         $(function () {
             $("#btn1").click(function () {
