--- a/Test/TestRender.html
+++ b/Test/TestRender.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <script src="../../jQuery/jquery-1.7.1.min.js"></script>
-    <script src="../RazorJs.js"></script>
+    <script src="../razor-tmpl.js"></script>
 </head>
 <body>
     <script type="text/template" id="test-template">
