--- a/Demo/razor.render.html
+++ b/Demo/razor.render.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script src="../RazorJs.js"></script>
+    <script src="../razor-tmpl.js"></script>
 
     <script>
         window.onload = function () {
@@ -17,7 +17,7 @@
     </script>
 </head>
 <body>
-    只加载RazorJs
+    只加载razor-tmpl
     <div id="container">
 
     </div>
