--- a/Test/TestEscape.html
+++ b/Test/TestEscape.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="../jquery-1.7.1.min.js"></script>
-    <script src="../RazorJs.js"></script>
+    <script src="../razor-tmpl.js"></script>
     <title></title>
 </head>
 <body>
