--- a/Test/TestMinJS.html
+++ b/Test/TestMinJS.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
     <script src="../jquery-1.7.1.min.js"></script>
-    <script src="../RazorJs.min.js"></script>
+    <script src="../razor-tmpl.min.js"></script>
     <script>
         $(function () {
             $("#test-div-template").renderNode();
