--- a/Demo/jq-render-each.html
+++ b/Demo/jq-render-each.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
     <script src="../jquery-1.7.1.min.js"></script>
     <script src="../razor-tmpl.js"></script>
@@ -14,8 +14,7 @@
                         { age: 19, name: "lisi" },
                         { age: 20, name: "wangwu" }
                 ];
-
-                $("#test-razor-repeat").renderRepeat(ViewBag);
+                $("#test-razor-each").render(ViewBag);
             });
         });
     </script>
@@ -23,9 +22,9 @@
 <body>
     <div>
         <button onclick="return false;">有种你点我试试</button>
-        <button id ="btn1">试试就试试</buttonid>
+        <button id="btn1">试试就试试</buttonid>
     </div>
-    <div id="test-razor-repeat" razor-template razor-repeat="person in ViewBag.list">
+    <div id="test-razor-each" razor-template razor-each="person in ViewBag.list">
         <div>  叫啥子哟? 答: @(person.name)</div>
         <div>多大年纪涩? 答: @(person.age)</div>
     </div>
