--- a/Test/IfElse.html
+++ b/Test/IfElse.html
@@ -7,7 +7,7 @@
     <script src="../razor-tmpl.js"></script>
     <script>
         $(function () {
-            $("#template").renderRepeat({
+            $("#template").renderEach({
                 persons: [
                     { name: "zhangsan", age: 17 },
                     { name: "lisi", age: 18 },
