--- a/Demo/grammer-each.html
+++ b/Demo/grammer-each.html
@@ -12,7 +12,7 @@
                     { name: 'wang', age: 19 }
                 ]
             });
-            alert(res);
+            document.write(razor.encodeHtml(res));
         };
     </script>
 </head>
