--- a/Demo/razor.model.html
+++ b/Demo/razor.model.html
@@ -18,7 +18,7 @@
             });
 
             $("#test-btn-2").click(function () {
-                razor.changeModelName("model");
+                razor.model("model");
                 $("#test2").renderToParent(ViewBag);
             });
         });
