--- a/Demo/razor.symbol.html
+++ b/Demo/razor.symbol.html
@@ -7,7 +7,7 @@
     <script src="../razor-tmpl.js"></script>
     <script>
         $(function () {
-            razor.changeSymbol('~');
+            razor.symbol('~');
             $("#test-template").renderToParent();
         });
     </script>
