--- a/Test/TestEnbableEmptyValue.html
+++ b/Test/TestEnbableEmptyValue.html
@@ -9,7 +9,7 @@
         $(function () {
             razor.enableEmptyValue(true);
             $("#test-btn-1").click(function () {
-                $("#test1").quickRender();
+                $("#test1").render();
             });
         });
     </script>
