--- a/Test/TestEscape.html
+++ b/Test/TestEscape.html
@@ -37,7 +37,7 @@
     </div>
     <script>
         $(function () {
-            $(test4).renderNode();
+            $(test4).render();
 
             var vars = {
                 header: "Header",
