--- a/Test/TemplateGrmamer/each.html
+++ b/Test/TemplateGrmamer/each.html
@@ -8,7 +8,7 @@
 
     <script>
         $(function () {
-            $(template).renderNode();
+            $(template).render();
         });
     </script>
 </head>
