--- a/NodeJs/razor-tmpl/Test/multilayout.html
+++ b/NodeJs/razor-tmpl/Test/multilayout.html
@@ -6,11 +6,25 @@
 </head>
 <body id="layout-body">
     ﻿
-<div>
-    index.razor ...
-    <div>
-        hello
-    </div>
+
+<div id="base-left">
+    
+    <div> left </div>
+
+</div>
+<div id="base-center">
+    ﻿
+
+
+
+<div> center </div>
+
+
+</div>
+<div id="base-right">
+    
+    <div> right </div>
+
 </div>
 </body>
 </html>
