--- a/TestHtml/IfElse.html
+++ b/TestHtml/IfElse.html
@@ -34,7 +34,7 @@
                 <div>@(p.name)</div>
                 <div>和谐内容</div>
             }
-            else
+            @else
             {
                 @while(p.age > 0)
                 {
