--- a/demo/noraml-switch-case.html
+++ b/demo/noraml-switch-case.html
@@ -13,9 +13,9 @@
                     { name: 'lisi', age: 19 }
                 ]
             });
-            
+
             var adv = razor._advance;
-            console.log(adv.toCode(adv.toSegments(template.innerHTML)));
+            console.log(adv.toCode(adv.toTokens(template.innerHTML)));
         });
     </script>
 </head>
