--- a/nodejs/razor-tmpl/test/bin工具/使用var dest指定/output/index.html
+++ b/nodejs/razor-tmpl/test/bin工具/使用var dest指定/output/index.html
@@ -5,7 +5,7 @@
         <!-- __filename support -->
         D:\js\project\Js-In-VS\Js-In-VS\Lib\razor-tmpl\nodejs\razor-tmpl\test\bin工具\使用var dest指定
         <!-- __filename support -->
-        D:\js\project\Js-In-VS\Js-In-VS\Lib\razor-tmpl\nodejs\razor-tmpl\test\bin工具\使用var dest指定\index.razor
+        D:\js\project\Js-In-VS\Js-In-VS\Lib\razor-tmpl\nodejs\razor-tmpl\test\bin工具\使用var dest指定\index.rhtml
     </head>
 </html>
 
