--- a/nodejs/razor-tmpl/test/layout测试/4.sync.html
+++ b/nodejs/razor-tmpl/test/layout测试/4.sync.html
@@ -11,8 +11,8 @@
             
 
 <div class="subcontainer">
-    <div> .container in layout/4.razor ...</div>
-    <div> follow contents use layout/4.razor as layout</div>
+    <div> .container in layout/4.rhtml ...</div>
+    <div> follow contents use layout/4.rhtml as layout</div>
     
 
 <div>
