--- a/demo/jq-render-each.html
+++ b/demo/jq-render-each.html
@@ -3,30 +3,31 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script src="../jquery-1.7.1.min.js"></script>
-    <script src="../razor-tmpl.js"></script>
+    <script src="jquery-1.7.1.min.js"></script>
+    <script src="../browser/razor-tmpl.js"></script>
     <script>
         $(function () {
             $("#btn1").click(function () {
-                var ViewBag = {};
-                ViewBag.list = [
-                        { age: 18, name: "zhangsan" },
-                        { age: 19, name: "lisi" },
-                        { age: 20, name: "wangwu" }
+                var locals = {};
+                locals.list = [
+                    { age: 18, name: "zhangsan" },
+                    { age: 19, name: "lisi" },
+                    { age: 20, name: "wangwu" }
                 ];
-                $("#test-razor-each").render(ViewBag);
+
+                $("#test-razor-each").render(locals);
             });
         });
     </script>
 </head>
 <body>
     <div>
-        <button onclick="return false;">有种你点我试试</button>
-        <button id="btn1">试试就试试</buttonid>
+        <button id="btn1">Click me !</buttonid>
     </div>
-    <div id="test-razor-each" razor-template razor-each="person in ViewBag.list">
-        <div>  叫啥子哟? 答: @(person.name)</div>
-        <div>多大年纪涩? 答: @(person.age)</div>
+
+    <div id="test-razor-each" razor-template razor-each="person in locals.list">
+        <div>Q: Got a name ? A: @(person.name)</div>
+        <div>Q: And age ? A: @(person.age)</div>
     </div>
 </body>
 </html>
